--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,4 @@
-custom: https://buymeacoffee.com/daviddarnes#support
+# These are supported funding model platforms
 
+github: daattali
+patreon: DeanAttali
