--- a/_config.yml
+++ b/_config.yml
@@ -1,151 +1,235 @@
-exclude:
-- README.md
-- CODE_OF_CONDUCT.md
-- CONTRIBUTING.md
-- screenshot.png
-- LICENSE
-- CNAME
-- Gemfile
-- Gemfile.lock
-- alembic-jekyll-theme.gemspec
-- .jekyll-cache
+# Welcome to Beautiful Jekyll!
+# This config file is meant for settings that affect your entire website. When you first
+# set up your website you should go through all these settings and edit them, but after
+# the initial set up you won't need to come back to this file often.
 
-plugins:
-- jekyll-sitemap
-#- jekyll-mentions
-- jekyll-paginate
-- jekyll-seo-tag
-- jekyll-redirect-from
-- jekyll-feed
-- jekyll-commonmark
-- jekyll-include-cache
-- jemoji
+# --- Required options --- #
 
-paginate: 5 # jekyll-paginate > items per page
-paginate_path: posts/page:num # jekyll-paginate > blog page
+# Name of website
+title: JWHer's blog
 
-#jekyll-mentions: https://twitter.com # jekyll-mentions > service used when @replying
-#twitter:
-#  username: # jekyll-seo-tag > Owners twitter username
-
+# Your name to show in the footer
 author: JWHer
-social:
-  name: JWHer
-  links:
-#    - https://twitter.com/DavidDarnes
-#    - https://www.facebook.com/daviddarnes
-    - https://www.linkedin.com/in/정원-허-1160b3193
-    - https://github.com/jwher
 
-#markdown: CommonMark # Markdown parse settings, CommonMark performs slightly better an others in build time
-#commonmark:
-#  options: ["SMART", "FOOTNOTES"]
-#  extensions: ["strikethrough", "autolink", "table"]
+# --- List of links in the navigation bar --- #
 
-sass:
-  style: compressed
-permalink: /:title # Permalink style (pretty: /YYYY/MM/DD/page-name/)
-excerpt_separator: <!-- more --> # Marks end of excerpt in posts
-timezone: # Timezone for blog posts and alike
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+  #Author's home: " "
 
-collections:
-  posts:
-    title: Posts # Needed for Siteleaf
-    output: true
-    description: "생각과 아이디어" # The post list page content
-    feature_text: |
-      Let thine heart retain my words:
-      Keep my commandments, and live.
-    feature_image: "https://picsum.photos/2560/600?image=866" # Todo 변경
+# --- Logo --- #
 
+# Image to show in the navigation bar - works best with a square image
+# Remove this parameter if you don't want an image in the navbar
+avatar: "/assets/img/Bamboo.png"
+
+# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
+round-avatar: true
+
+# If you want to have an image logo in the top-left corner instead of having the title of the website,
+# then specify the following parameter
+#title-img: /path/to/image
+
+
+# --- Footer social media links --- #
+
+# Select the social network links that you want to show in the footer.
+# Uncomment the links you want to show and add your information to each one.
+social-network-links:
+  email: "hacell2@gamil.com"
+  #facebook: deanattali
+  github: jwher
+  #twitter: daattali
+  #patreon: DeanAttali
+  #youtube: c/daattali
+#  medium: yourname
+#  reddit: yourname
+  linkedin: 정원-허-1160b3193
+#  xing: yourname
+#  stackoverflow: "3943160/daattali"
+#  snapchat: deanat78
+#  instagram: deanat78
+#  spotify: yourname
+#  telephone: +14159998888
+#  steam: deanat78
+#  twitch: yourname
+#  yelp: yourname
+#  telegram: yourname
+#  calendly: yourname
+#  mastodon: instance.url/@username
+#  ORCID: your ORCID ID
+#  google-scholar: your google scholar
+
+# If you want to show a link to an RSS in the footer, add the site description here.
+# If you don't want to show an RSS link, remove the following line.
+rss-description: This website is a virtual proof that I'm awesome
+
+# --- General options --- #
+
+# Select which social network share links to show in posts
+share-links-active:
+  twitter: true
+  facebook: true
+  linkedin: true
+  vk: false
+
+# How to display the link to your website in the footer
+# Remove this if you don't want a link in the footer
+url-pretty: "jwher.github.io"
+
+# Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
+excerpt_length: 50
+
+# Whether or not to show an excerpt for every blog post in the feed page
+feed_show_excerpt: true
+
+# Whether or not to show a list of tags below each post preview in the feed page
+feed_show_tags: true
+
+# The keywords to associate with your website, for SEO purposes
+#keywords: "my,list,of,keywords"
+
+# --- Colours / background image --- #
+
+# Personalize the colours in your website. Colour values can be any valid CSS colour
+
+navbar-col: "#EAEAEA"
+navbar-text-col: "#404040"
+navbar-border-col: "#DDDDDD"
+page-col: "#FFFFFF"
+text-col: "#404040"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#EAEAEA"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
+
+# Alternatively, the navbar, footer, and page background can be set to an image
+# instead of colour
+
+#navbar-img: "/assets/img/bgimage.png"
+#footer-img: "/assets/img/bgimage.png"
+#page-img: "/assets/img/bgimage.png"
+
+# Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
+#mobile-theme-col: "#0085A1"
+
+# For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
+#site-css:
+#  - "/assets/css/custom-styles.css"
+
+# If you have common JavaScript files that should be included in every page, list them here
+#site-js:
+#  - "/assets/js/custom-script.js"
+
+# --- Web Analytics Section --- #
+
+# Fill in your Google Analytics gtag.js ID to track your website using gtag
+#gtag: ""
+
+# Fill in your Google Analytics ID to track your website using Google Analytics
+#google_analytics: ""
+
+# Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
+#cloudflare_analytics: ""
+
+# Google Tag Manager ID
+#gtm: ""
+
+# Matomo (aka Piwik) Web statistics
+# Uncomment the following section to enable Matomo. The opt-out parameter controls
+# whether or not you want to allow users to opt out of tracking.
+#matomo:
+#  site_id: "9"
+#  uri: "demo.wiki.pro"
+#  opt-out: true
+
+# --- Comments --- #
+
+# To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
+disqus: "jwher"
+
+# To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
+#fb_comment_id: ""
+
+# To use Utterances comments: (0) uncomment the following section, (1) fill in
+# "repository" (make sure the repository is public), (2) Enable Issues in your repository,
+# (3) Install the Utterances app in your repository https://github.com/apps/utterances
+# See more details about the parameters below at https://utteranc.es/
+#utterances:
+#  repository: # GitHub username/repository eg. "daattali/beautiful-jekyll"
+#  issue-term: title   # Mapping between blog posts and GitHub issues
+#  theme: github-light # Utterances theme
+#  label: blog-comments # Label that will be assigned to GitHub Issues created by Utterances
+
+# To use Staticman comments, uncomment the following section. You may leave the reCaptcha
+# section commented if you aren't using reCaptcha for spam protection. 
+# Using Staticman requires advanced knowledge, please consult 
+# https://github.com/eduardoboucas/staticman/ and https://staticman.net/ for further 
+# instructions. For any support with staticman please direct questions to staticman and 
+# not to BeautifulJekyll.
+#staticman:
+#  repository : # GitHub username/repository eg. "daattali/beautiful-jekyll"
+#  branch     : master # If you're not using `master` branch, then you also need to update the `branch` parameter in `staticman.yml`
+#  endpoint   : # URL of your deployment, with a trailing slash eg. "https://<your-api>/v3/entry/github/"
+#  reCaptcha:   # (optional, set these parameters in `staticman.yml` as well) 
+#    siteKey  : # You need to apply for a site key on Google
+#    secret   : # Encrypt your password by going to https://<your-own-api>/v3/encrypt/<your-site-secret>
+
+# --- Misc --- #
+
+# Ruby Date Format to show dates of posts
+date_format: "%F"
+
+# Facebook App ID
+#fb_app_id: ""
+
+# --- You don't need to touch anything below here (but you can if you want) --- #
+
+# Output options (more information on Jekyll's site)
+timezone:
+markdown: kramdown
+highlighter: rouge
+permalink: /:year-:month-:day-:title/
+paginate: 5
+
+kramdown:
+  input: GFM
+
+# Default YAML values (more information on Jekyll's site)
 defaults:
-  -
-    scope:
-      path: ""
-    values:
-      image: "/assets/default-social-image.png" # Default image for sharing
   -
     scope:
       path: ""
       type: "posts"
     values:
-      layout: post # Set the default layout for posts
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
   -
     scope:
-      path: ""
-      type: "pages"
+      path: "" # any file that's not a post will be a "page" layout by default
     values:
-      layout: page # Set the default layout for pages
+      layout: "page"
 
-# Site settings
-encoding: utf-8
-lang: ko
-title: "허정원 기술블로그"
-logo: "/assets/logos/logo.svg"
-description: "I hang out with some ML, Using kubernetes-kubeflow"
-url: "https://jwher.github.io"
-baseurl: ""
-repo: "https://github.com/jwher/jwher.github.io"
-email: "hacell2@gmail.com"
-disqus: "jwher"
-# date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
-google_analytics: "G-XHBVCY40VB"
-# google_analytics_anonymize_ip: ""
-# service_worker: false # Will turn off the service worker if set to false
-# short_name: "Al" # The web application short name, defaults to the site title
-css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
+# Exclude these files from production site
+exclude:
+  - CHANGELOG.md
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - screenshot.png
+  - docs/
 
-favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
-  16: '/assets/logos/logo.svg'
-  32: '/assets/logos/logo.svg'
-  96: '/assets/logos/logo.svg'
-  120: '/assets/logos/logo.svg'
-  144: '/assets/logos/logo.svg'
-  180: '/assets/logos/logo.svg'
-  512: '/assets/logos/logo.svg'
-  1024: '/assets/logos/logo.svg'
-
-# --- 네비게이션 --- #
-navigation_header:
-- title: Home
-  url: /
-#- title: Elements
-#  url: /elements/
-- title: Posts
-  url: /posts/
-- title: Categories
-  url: /categories/
-#- title: ⌕
-#  url: /search/
-#- title: Fork Alembic
-#  url: https://github.com/daviddarnes/alembic
-
-navigation_footer:
-- title: Created by JWHer
-  url: https://github.com/jwher
-
-social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
-#  Twitter: https://twitter.com/DavidDarnes
-  LinkedIn: https://www.linkedin.com/in/정원-허-1160b3193
-  GitHub: https://github.com/jwher
-#  link: https://darn.es
-  RSS: /feed.xml
-
-sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
-#  Twitter: "#0d94e7"
-#  facebook: "#3B5998"
-  Email: true
-
-# Load custom fonts from fonts.google.com etc
-#
-# TIP: Try to keep the number of urls as low to reduce the performance cost
-#      If multiple fonts can be requested in a single url opt for this
-fonts:
-  preconnect_urls:
-    - https://fonts.gstatic.com
-  font_urls:
-    - https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap
-    - https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jemoji
 
 live2d:
   enable: true
@@ -163,3 +247,6 @@ live2d:
     height: 150
   mobile:
     show: true
+
+# Beautiful Jekyll / Dean Attali
+# 2fc73a3a967e97599c9763d05e564189
