--- a/angular.json
+++ b/angular.json
@@ -84,7 +84,10 @@
               "browserTarget": "jwher-tech:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "src/proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
