--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng-katex": "^2.0.3",
+    "ngx-markdown": "^13.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -37,13 +39,15 @@
     "@angular/cli": "~13.2.5",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.52",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   }
 }
