--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ collections:
     feature_text: |
       Let thine heart retain my words:
       Keep my commandments, and live.
-    feature_image: "https://picsum.photos/2560/600?image=866" # Todo 변경
+    feature_image: /assets/Bamboo-road.jpg
 
 defaults:
   -
