카테고리 링크 수정

--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ navigation_header:
 - title: Posts
   url: /posts/
 - title: Categories
-  url: /categories/
+  url: /categories
 #- title: ⌕
 #  url: /search/
 #- title: Fork Alembic
