disqus 사용 중지 utterances 사용

--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,8 @@ url: "https://jwher.github.io"
 baseurl: ""
 repo: "https://github.com/jwher/jwher.github.io"
 email: "hacell2@gmail.com"
-disqus: "jwher"
+# disqus: "jwher"
+utterances: "true"
 # date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
 google_analytics: "G-XHBVCY40VB"
 # google_analytics_anonymize_ip: ""
