--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: yarn
+          cache: npm #yarn
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci #yarn install --frozen-lockfile
       - name: Test build website
-        run: yarn build
+        run: npm run build #yarn build
