Add cv and change deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
         run: npm ci #yarn install --frozen-lockfile
       - name: Build website
         run: npm run build #yarn build
+      - name: Copy static files
+        run: cp google2f0d0a0c841af853.html jeongwon-her.pdf build/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -28,16 +30,3 @@ jobs:
           publish_dir: ./build
           # user_name: github-actions[bot]
           # user_email: 41898282+github-actions[bot]@users.noreply.github.com
-
-      - name: Copy google site verification
-        uses: actions/checkout@v2
-        env:
-          TARGET_BRANCH: 'gh-pages'
-        run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          git fetch
-          git checkout $TARGET_BRANCH
-          git checkout docusaurus -- google2f0d0a0c841af853.html
-          git add -A
-          git push origin $TARGET_BRANCH
