--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build website
         run: npm run build #yarn build
       - name: Copy static files
-        run: cp google2f0d0a0c841af853.html jeongwon-her.pdf build/
+        run: mkdir build && cp google2f0d0a0c841af853.html build/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
